--- a/config/templates/audition_management/editRole.html
+++ b/config/templates/audition_management/editRole.html
@@ -115,6 +115,7 @@
         {% endfor %}
     ]
     $(function() {
+        // life cycle
         setTimeout(function() {
             $('.formset_row').formset({
                     addText: 'Add Event',
