Fixed bugs, added video

--- a/config/templates/audition_management/addTags.html
+++ b/config/templates/audition_management/addTags.html
@@ -113,7 +113,7 @@
 {% block js %}
 <script type="text/javascript">
     $('.formset_row').formset({
-            addText: 'Add Event',
+            addText: 'Add Tag',
             deleteText: 'Remove',
             prefix: 'form1',
             addCssClass: 'btn btn-sm btn-primary',
