--- a/config/templates/session/settings.html
+++ b/config/templates/session/settings.html
@@ -77,31 +77,65 @@
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="thumbnail">
-                             <form class="form-horizontal" style="margin:20px;" method="post">
-                                {% csrf_token %}
-                                <input type="hidden" name="form_type" value="change_password_form">
-                                {% for field in change_password_form %}
-                                <div class="form-group">
-                                    {{ field.label_tag }}
-                                    {% render_field field class+="form-control" %}
-                                    {% if field.help_text %}
-                                    <small class="form-text text-muted">{{ field.help_text|safe }}
-                                    </small>
-                                    {% endif %}
-                                </div>
-                                {% if field.errors|length > 0 %}
-                                <div class="form-group">
-                                    <ul>
-                                        {% for error in field.errors %}
-                                        <li style="color: red">{{ error }}</li>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="thumbnail">
+                                     <form class="form-horizontal" style="margin:20px;" method="post">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="form_type" value="change_password_form">
+                                        {% for field in change_password_form %}
+                                        <div class="form-group">
+                                            {{ field.label_tag }}
+                                            {% render_field field class+="form-control" %}
+                                            {% if field.help_text %}
+                                            <small class="form-text text-muted">{{ field.help_text|safe }}
+                                            </small>
+                                            {% endif %}
+                                        </div>
+                                        {% if field.errors|length > 0 %}
+                                        <div class="form-group">
+                                            <ul>
+                                                {% for error in field.errors %}
+                                                <li style="color: red">{{ error }}</li>
+                                                {% endfor %}
+                                            </ul>
+                                        </div>
+                                        {% endif %}
                                         {% endfor %}
-                                    </ul>
+                                        <button class="btn btn-primary" type="submit">Change Password</button>
+                                    </form>
                                 </div>
-                                {% endif %}
-                                {% endfor %}
-                                <button class="btn btn-primary" type="submit">Change Password</button>
-                            </form>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                                  Watch Tutorial
+                                </button>
+                                <!-- Modal -->
+                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                <h4 class="modal-title" id="myModalLabel">Tutorial Video</h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                {% if is_casting %}
+                                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/k0XN8JZiRms" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen> 
+                                                    </iframe>
+                                                {% else %}
+                                                Coming Soon
+                                                {% endif %}
+                                            </div>
+                                            <div class="modal-footer">
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
