changes for merging

--- a/config/templates/audition_management/auditionProfile.html
+++ b/config/templates/audition_management/auditionProfile.html
@@ -54,7 +54,7 @@
 
 {% block js %}
 <script type="text/javascript">
-	var unparsed = "{{user}}";
+	var unparsed = {{user}};
 	console.log(unparsed);
 </script>
 {% endblock js %}
