--- a/config/templates/audition_management/create.html
+++ b/config/templates/audition_management/create.html
@@ -14,6 +14,7 @@
                 <form class="form-horizontal" style="margin:20px;" method="post">
                     <div class="row">
                         <div class="col-lg-12">
+                            <h4>Posting Basic Details</h4><hr>
                             {% csrf_token %}
                             {% for field in form %}
                             <div class="form-group">
@@ -37,6 +38,7 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
+                            <h4>Posting Events</h4><hr>
                         {{ formset.management_form }}
                         <table class="table table-striped">
                             {% for form in formset %}
