--- a/config/templates/audition_management/role.html
+++ b/config/templates/audition_management/role.html
@@ -5,123 +5,181 @@
 
 {% block content %}
 <div id="roleDiv">
-	<div class = "container-fluid">
-	      <div class="row">
-	        <div class="col-sm-6">
-	          <div class="panel panel-primary">
-	            <div class="panel-heading">
-	              <h2 class='text-center'> {{role.name}} </h2>
-	            </div>
-	            <div class="panel-body">
-	            	<table class="table">
-	            		<thead>
-	            			<tr>
-	            				<th>Role Tags</th>
-	            			</tr>
-	            		</thead>
-	            		<tbody>
-	            			<td>
-				            	{% for tag in role.tags.all %}
-					            	<span class="badge badge-info pull-left" style="margin:2px;">
-					     				{{ tag }}
-					            	</span>
-				            	{% endfor %}
-	            			</td>
-	            		</tbody>
-	            	</table>
-	            	<hr><br>
-	            	<table class="table table-striped">
-	            		<thead>
-	            			<tr>
-	            				<th colspan="2">Role Details</th>
-	            			</tr>
-	            		</thead>
-	            		<tbody>
-	            			<tr>
-	            				<th>Casting Agent:</th>
-	            				<td>{{role.agent}}</td>
-	            			</tr>
-	            			<tr>
-	            				<th>Role Type:</th>
-	            				<td>{{role.get_domain_display}}</td>
-	            			</tr>
-	            			<tr>
-	            				<th>Studio Address:</th>
-	            				<td>{{role.studio_address}}</td>
-	            			</tr>
-	            			<tr>
-	            				<th>Description:</th>
-	            				<td>
-	            					<div class="well" style="max-height: 300px; overflow-y:scroll;">
-	            						{{role.description}}
-	            					</div>
-	            				</td>
-	            			</tr>
-	            		</tbody>
-	            	</table>
-	            	<hr><br>
-	            	<table class="table table-striped">
-	            		<thead>
-	            			<tr>
-	            				<th colspan="2">Casting Agent Information</th>
-	            			</tr>
-	            		</thead>
-	            		<tbody>
-	            			<tr>
-	            				<th>Name</th>
-	            				<td>{{role.agent.profile.first_name}} {{role.agent.profile.last_name}}</td>
-	            			</tr>
-	            			<tr>
-	            				<th>Email</th>
-	            				<td>{{role.agent.profile.email}}</td>
-	            			</tr>
-	            		</tbody>
-	            	</table>
-	              	<div class="text-center">
-	                	<button type="submit" class="btn btn-primary text">Schedule Audition</button>
-	              	</div>
-	            </div>
-	          </div>
-	        </div>
-	        <div class="col-sm-6">
-	        	<div class="panel panel-primary">
-		            <div class="panel-heading">
-		              <h2 class='text-center'> Important Dates </h2>
-		            </div>
-		            <div class="panel-body" style="height:748px;">
-		            	<div class="row">
-		            		<div class="col-lg-12">
-		            			<div class='wrapper' style="height: 70%">
-					            	<table id="events" class="table table-striped">
-					            		<thead>
-					            			<tr>
-					            				<th>Event Name</th>
-					            				<th>Event Date</th>
-					            			</tr>
-					            		</thead>
-					            		<tbody>
-					            			{% for event in role.dates.all %}
-					            			<tr>
-					            				<td>{{event.name}}</td>
-					            				<td>{{event.date}}</td>
-					            			</tr>
-					            			{% empty %}
-					            				<tr>
-					            					<td colspan="2" style="text-align:center">
-					            						No events have been added for this posting. Contact the agent.
-					            					</td>
-					            				</tr>
-					            			{% endfor %}
-					            		</tbody>
-					            	</table>
-		            			</div>
-		            		</div>
-		            	</div>
-		            </div>
-		        </div>
-	        </div>
-	      </div>
-	  </div>
+	<div class="row">
+		<div class="col-sm-6">
+			<div class="panel panel-primary">
+				<div class="panel-heading">
+					<h2 class='text-center'> {{role.name}} </h2>
+				</div>
+				<div class="panel-body">
+					<div class="row">
+						<div class="col-lg-12">
+							<table class="table">
+								<thead>
+									<tr>
+									<th>Role Tags</th>
+									</tr>
+								</thead>
+								<tbody>
+									<td>
+										{% for tag in role.tags.all %}
+										<span class="badge badge-info pull-left" style="margin:2px;">
+										{{ tag }}
+										</span>
+										{% endfor %}
+									</td>
+								</tbody>
+							</table>
+							<hr><br>
+							<table class="table table-striped">
+								<thead>
+									<tr>
+										<th colspan="2">Role Details</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<th>Casting Agent:</th>
+										<td>{{role.agent}}</td>
+									</tr>
+									<tr>
+										<th>Role Type:</th>
+										<td>{{role.get_domain_display}}</td>
+									</tr>
+									<tr>
+										<th>Studio Address:</th>
+										<td>{{role.studio_address}}</td>
+									</tr>
+									<tr>
+										<th>Description:</th>
+										<td>
+											<div class="well" style="max-height: 300px; overflow-y:scroll;">
+											{{role.description}}
+											</div>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+							<hr><br>
+							<table class="table table-striped">
+								<thead>
+									<tr>
+										<th colspan="2">Casting Agent Information</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<th>Name</th>
+										<td>{{role.agent.profile.first_name}} {{role.agent.profile.last_name}}</td>
+									</tr>
+									<tr>
+										<th>Email</th>
+										<td>{{role.agent.profile.email}}</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+					{% if not is_casting %}
+					<div class="row">
+						<div class="col-lg-2 col-lg-offset-3">
+							<form  action="" method="post">
+								{% csrf_token %}
+								<button type="submit" class="btn btn-sm btn-primary">Schedule Audition</button>
+							</form>
+							
+						</div>
+						<div class="col-lg-2 col-lg-offset-1">
+							<a href="{% url 'audition_management:user' pk=role.agent.profile.pk %}" class="btn btn-sm btn-info">View Agent Details</a>
+						</div>
+					</div>
+					{% endif %}
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6">
+			<div class="panel panel-primary">
+				<div class="panel-heading">
+					<h2 class='text-center'> Important Dates </h2>
+				</div>
+				{% if not is_casting %}
+				<div class="panel-body" style="height:662px;">
+				{% else %}
+				<div class="panel-body" style="height:622px;">
+				{% endif %}
+					<div class="row">
+						<div class="col-lg-12">
+							<div class='wrapper' style="height: 70%">
+								<table id="events" class="table table-striped">
+									<thead>
+										<tr>
+											<th>Event Name</th>
+											<th>Event Date</th>
+										</tr>
+									</thead>
+									<tbody>
+										{% for event in role.dates.all %}
+										<tr>
+											<td>{{event.name}}</td>
+											<td>{{event.date}}</td>
+										</tr>
+										{% empty %}
+										<tr>
+											<td colspan="2" style="text-align:center">
+												No events have been added for this posting. Contact the agent.
+											</td>
+										</tr>
+										{% endfor %}
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	{% if is_casting and role.agent == request.user.casting_account %}
+	 <div class="row">
+		 <div class="col-sm-12">
+			<div class="panel panel-primary">
+				<div class="panel-heading">
+				 	<h2 class='text-center'> Applicants </h2>
+				</div>
+				<div class="panel-body" style="height:400px;">
+					<div id="applicants" class="wrapper" style="height: 70%">
+						<table class="table table-striped">
+							<thead>
+								<th>Name</th>
+								<th>Email</th>
+								<th>Tags</th>
+								<th>&nbsp;</th>
+							</thead>
+							<tbody>
+								<tr v-for="person in displayedApplicants">
+                                    <td>(( person.user.name ))</td>
+                                    <td>(( person.user.email ))</td>
+                                    <td><span class="badge badge-primary" v-for="tag in person.user.tags">(( tag ))</span>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                            			<a v-bind:href="viewAccount(person.user.user_pk)" class="btn btn-xs btn-info">View Account</a>
+                                    	<form action="" method="post">
+                                    		{% csrf_token %}
+                                    		<input type="hidden" name="pk" v-bind:value="person.id">
+                                    		<button style="margin-left:100px; margin-top:-48px;" type="submit" class="btn btn-xs btn-danger">X</button></td>
+                                    	</form>
+                                </tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		 </div>	
+	 </div>
+	{% endif %}
+	</div>
 </div>
 {% endblock %}
 
@@ -130,9 +188,38 @@
 {% block js %}
 <script type="text/javascript">
 	$("#events").floatThead({
-        scrollContainer: function($table){
-            return $table.closest('.wrapper');
-        }
-    });
+		scrollContainer: function($table){
+			return $table.closest('.wrapper');
+		}
+	});
+	var unparsed = "{{auditions}}"
+	$(function() {
+		unparsed = unparsed.split("&#39;").join("\"").split("&quot;").join("")
+        parsed = processJS(unparsed)    
+		{% if is_casting and role.agent == request.user.casting_account %}
+		filterApp = new Vue({
+            el: "#applicants",
+            delimiters: ["((","))"],
+            // This is data that needs to be 2 way bound (such as the filter input)
+            // These cannot be set to undefined/null. 
+            data: {
+                filterText: "",
+                displayedApplicants: [],
+                allApplicants: [],
+                url: "{% url 'audition_management:user' pk=0 %}"
+            },
+            mounted: function() {
+            	var internalApp = this;
+                this.allApplicants = parsed
+                this.displayedApplicants = this.allApplicants
+            },
+            methods: {
+            	viewAccount: function(num) {
+					return filterApp.url.replace("0", num)
+            	}
+            }
+        })
+		{% endif %}
+	});
 </script>
 {% endblock js %}
