--- a/config/templates/session/settings.html
+++ b/config/templates/session/settings.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
 
-{% block title %}Account Settings!{% endblock %}
+{% block title %}Account Settings{% endblock %}
 
 {% block content %}
 <div class="row">
@@ -147,7 +147,11 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h4>Postings</h4>
+                {% if not is_casting %}
+                    <h4>Auditions</h4>
+                {% else %}
+                    <h4>Postings</h4>
+                {% endif %}
             </div>
             <div class="panel-body">
                 <div id="filterDiv">
@@ -235,7 +239,8 @@
                                             </td>
                                             <td>(( role.role.address ))</td>
                                             <td>
-                                                <a v-bind:href="setUrl(role.role.id)" class="btn btn-primary btn-sm pull-right">Edit</a>
+                                                <a v-bind:href="setViewUrl(role.role.id)" class="btn btn-primary btn-sm pull-right">View</a>
+                                                <a style="margin-right: 5px;" v-bind:href="setUrl(role.role.id)" class="btn btn-primary btn-sm pull-right">Edit</a>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -249,7 +254,7 @@
     </div>
 </div>
    
-</div>
+<!-- </div> -->
 {% endblock %}
 
 {% block js %}
@@ -339,6 +344,7 @@
                 displayedRoles: [],
                 allRoles: [],
                 url: "{% url 'audition_management:edit-role' pk=0 %}",
+                viewUrl: "{% url 'audition_management:role' pk=0 %}"
             },
             mounted: function() {
                 // we save the 'this' keyword here because once we enter the next scope
@@ -448,7 +454,9 @@
                     filterApp.displayedRoles = filterApp.allRoles;
                     $("#tagSelect").val(null).trigger('change');
                 },
-
+                setViewUrl: function(num) {
+                    return filterApp.viewUrl.replace("0", num)
+                },
                 setUrl: function(num) {
                     return filterApp.url.replace("0", num);
                 }
